apps/trilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  namespace: trilium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      enableServiceLinks: false
      containers:
        - name: trilium
          image: triliumnext/notes:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: trilium-data
              mountPath: /home/node/trilium-data
          resources:
            limits:
              memory: 256Mi
              cpu: "500m"
            requests:
              memory: 128Mi
              cpu: "10m"
      volumes:
        - name: trilium-data
          persistentVolumeClaim:
            claimName: trilium-data
