apps/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  namespace: trilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: trilium.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: trilium
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - trilium.sanxer.dk
      secretName: trilium-tls
